add_library(
   AUTOSAR_Bsw
   ./BswM/LATEST/BswM.cpp
   ./Dem/LATEST/Dem.cpp
   ./Det/LATEST/Det.cpp
   ./EcuM/LATEST/EcuM.cpp
   ./NvM/LATEST/NvM.cpp
   ./Os/LATEST/Os.cpp
   ./SchM/LATEST/SchM.cpp
   ./StartUp/LATEST/StartUp.cpp
   ./Swc_EcuM/LATEST/Swc_EcuM.cpp
   ./Swc_Os/LATEST/Swc_Os.cpp
   ./WdgM/LATEST/WdgM.cpp
)

include_directories(
   ./BswM/LATEST
   ./Dem/LATEST
   ./Det/LATEST
   ./EcuM/LATEST
   ./NvM/LATEST
   ./Os/LATEST
   ./SchM/LATEST
   ./StartUp/LATEST
   ./Swc_EcuM/LATEST
   ./Swc_Os/LATEST
   ./WdgM/LATEST
   ./EcuAb/LATEST/MemIf/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Adc/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Can/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Dio/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Eep/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Eth/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Fls/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Fr/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Gpt/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Icu/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Lin/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Mcu/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Ocu/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Port/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Pwm/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Spi/LATEST
   ./EcuAb/LATEST/McAL/LATEST/Wdg/LATEST
)

