add_library(
   AUTOSAR_Bsw
   ./BswM/LATEST/BswM.cpp
   ./Com/LATEST/Com.cpp
   ./ComM/LATEST/ComM.cpp
   ./Csm/LATEST/Csm.cpp
   ./Dem/LATEST/Dem.cpp
   ./Det/LATEST/Det.cpp
   ./EcuM/LATEST/EcuM.cpp
   ./NvM/LATEST/NvM.cpp
   ./Os/LATEST/Os.cpp
   ./SchM/LATEST/SchM.cpp
   ./StartUp/LATEST/StartUp.cpp
   ./Swc_EcuM/LATEST/Swc_EcuM.cpp
   ./Swc_Os/LATEST/Swc_Os.cpp
   ./WdgM/LATEST/WdgM.cpp
)

include_directories(
   ../../common/LATEST
   ../../common/LATEST/Compiler_Abstraction_GNU/LATEST
   ./BswM/LATEST
   ./Com/LATEST
   ./ComM/LATEST
   ./Csm/LATEST
   ./Dem/LATEST
   ./Det/LATEST
   ./EcuM/LATEST
   ./NvM/LATEST
   ./Os/LATEST
   ./SchM/LATEST
   ./StartUp/LATEST
   ./Swc_EcuM/LATEST
   ./Swc_Os/LATEST
   ./WdgM/LATEST
   ../../EcuAb/LATEST/MemIf/LATEST
   ../../McAL/LATEST/Adc/LATEST
   ../../McAL/LATEST/Can/LATEST
   ../../McAL/LATEST/Dio/LATEST
   ../../McAL/LATEST/Eep/LATEST
   ../../McAL/LATEST/Eth/LATEST
   ../../McAL/LATEST/Fls/LATEST
   ../../McAL/LATEST/Fr/LATEST
   ../../McAL/LATEST/Gpt/LATEST
   ../../McAL/LATEST/Icu/LATEST
   ../../McAL/LATEST/Lin/LATEST
   ../../McAL/LATEST/Mcu/LATEST
   ../../McAL/LATEST/Ocu/LATEST
   ../../McAL/LATEST/Port/LATEST
   ../../McAL/LATEST/Pwm/LATEST
   ../../McAL/LATEST/Spi/LATEST
   ../../McAL/LATEST/Wdg/LATEST
)

